--- a/package.json
+++ b/package.json
@@ -5,23 +5,31 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rimraf dist && tsc",
-    "test": "karma start"
+    "test": "karma start",
+    "lint": "eslint . --ext .ts",
+    "docs:generate": "rimraf documentation-website/* && typedoc",
+    "docs:serve": "live-server ./docs"
   },
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "@dittolive/ditto": "^1.0.8",
+    "@dittolive/ditto": "^1.0.10",
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
-    "@dittolive/ditto": "^1.0.8",
+    "@dittolive/ditto": "^1.0.10",
     "@types/chai": "^4.2.21",
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "karma": "^6.3.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -32,6 +40,11 @@
     "mocha": "^9.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typedoc": "^0.22.4",
+    "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "live-server": "^1.2.1"
   }
 }
