--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on: [push]
 jobs:
   build:
-    name: Test
+    name: Continuous Deployment
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
