--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,8 @@ jobs:
     name: Continuous Deployment
     runs-on: ubuntu-latest
     steps:
-      run: sudo apt-get update
-      run: sudo apt-get install -y libgbm-dev
+      - id: 'updating ubuntu'
+        run: sudo apt-get update && sudo apt-get install -y libgbm-dev
       - uses: actions/checkout@v2
       - uses: borales/actions-yarn@v2.3.0
         with:
