--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,10 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libgbm-dev
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: browser-actions/setup-chrome@latest
         with:
           node-version: '14'
       - run: yarn
       - run: yarn build
+      - run: CHROMIUM_BIN=$(which chrome) yarn test
+      - run: yarn docs:generate
