--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "React wrappers for Ditto",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc",
     "test": "karma start",
@@ -40,8 +41,8 @@
     "lodash": "^4.17.21",
     "mocha": "^9.0.3",
     "puppeteer": "^10.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rimraf": "^3.0.2",
     "typedoc": "^0.22.4",
     "typescript": "^4.4.3"
