--- a/examples/create-react-app-typescript-example/package.json
+++ b/examples/create-react-app-typescript-example/package.json
@@ -13,7 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react": "link:../../node_modules/react",
-    "react-dom": "link:../../node_modules/react-dom",
+    "react-dom": "link:../../node_modules/react/react-dom",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
