Configures Eslint and Prettier for the library and example project.

--- a/examples/create-react-app-typescript-example/package.json
+++ b/examples/create-react-app-typescript-example/package.json
@@ -41,5 +41,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "2.4.1",
+    "prettier-eslint": "^13.0.0"
   }
 }
