--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rimraf dist && tsc",
     "test": "karma start",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts,.tsx --fix",
     "docs:generate": "rimraf documentation-website/* && typedoc",
     "docs:serve": "live-server ./documentation-website"
   },
@@ -29,7 +29,11 @@
     "@typescript-eslint/parser": "^4.31.1",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "gh-pages": "^3.2.3",
     "karma": "^6.3.4",
     "karma-chai": "^0.1.0",
@@ -40,6 +44,8 @@
     "live-server": "^1.2.1",
     "lodash": "^4.17.21",
     "mocha": "^9.0.3",
+    "prettier": "2.4.1",
+    "prettier-eslint": "^13.0.0",
     "puppeteer": "^10.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
