--- a/examples/create-react-app-typescript-example/.eslintrc
+++ b/examples/create-react-app-typescript-example/.eslintrc
@@ -12,7 +12,7 @@
     "react/prop-types": "off",
     "react/sort-comp": "error",
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-non-null-assertion": "off",
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
