--- a/examples/create-react-app-typescript-example/package.json
+++ b/examples/create-react-app-typescript-example/package.json
@@ -15,7 +15,9 @@
     "react": "link:../../node_modules/react",
     "react-dom": "link:../../node_modules/react/react-dom",
     "react-scripts": "4.0.3",
+    "react-select": "^5.0.0",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -43,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-select": "^4.0.18",
+    "@types/uuid": "^8.3.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
