adding mocha reporter

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "karma": "^6.3.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
     "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-typescript": "^5.5.1",
     "karma-typescript-es6-transform": "^5.5.1",
     "live-server": "^1.2.1",
