--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@dittolive/ditto": "^1.0.10",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/chai": "^4.2.21",
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^9.0.0",
@@ -51,6 +52,7 @@
     "puppeteer": "^10.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "typedoc": "^0.22.4",
     "typescript": "^4.4.3"
