Fixes linter errors and adds the type checker and linter to the CI build.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
       - name: 'Install and Build'
         run: |
           yarn
+          yarn types
+          yarn lint
           yarn build
           
       - name: 'Run Tests'
