--- a/examples/create-react-app-typescript-example/package.json
+++ b/examples/create-react-app-typescript-example/package.json
@@ -10,10 +10,10 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "react": "link:../../node_modules/react",
-    "react-dom": "link:../../node_modules/react/react-dom",
+    "react-dom": "link:../../node_modules/react-dom",
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
     "typescript": "^4.1.2",
