--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/sinon": "^10.0.11",
+    "@types/sinon-chai": "^3.2.8",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
@@ -58,6 +60,8 @@
     "react-dom": "18.0.0",
     "react-test-renderer": "^18.0.0",
     "rimraf": "^3.0.2",
+    "sinon": "^13.0.1",
+    "sinon-chai": "^3.7.0",
     "typedoc": "^0.22.4",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2"
