chore: update `@dittolive/ditto` peer dependency
versions compatible with v1.1.10 are now allowed.

--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "url" : "https://github.com/getditto/react-ditto.git"
   },
   "peerDependencies": {
-    "@dittolive/ditto": "1.1.5",
+    "@dittolive/ditto": "^1.1.10",
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
-    "@dittolive/ditto": "1.1.5",
+    "@dittolive/ditto": "^1.1.10",
     "@testing-library/react": "^13.0.1",
     "@types/chai": "^4.2.21",
     "@types/lodash": "^4.14.172",
