--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,20 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": ["./tsconfig.json", "./examples/*/tsconfig.json"]
+  },
   "extends": [
-    "plugin:react/recommended",
+    "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:react/recommended",
     "prettier"
   ],
   "rules": {
+    "deprecation/deprecation": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/prop-types": "off",
@@ -25,7 +33,13 @@
       }
     ]
   },
-  "plugins": ["prettier", "simple-import-sort", "react-hooks"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier",
+    "simple-import-sort",
+    "react-hooks",
+    "deprecation"
+  ],
   "settings": {
     "react": {
       "version": "detect"
