--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-deprecation": "^1.3.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "gh-pages": "^3.2.3",
     "karma": "^6.3.4",
     "karma-chai": "^0.1.0",
@@ -56,8 +57,8 @@
     "live-server": "^1.2.1",
     "lodash": "^4.17.21",
     "mocha": "^9.0.3",
-    "prettier": "2.4.1",
-    "prettier-eslint": "^13.0.0",
+    "prettier": "2.7.1",
+    "prettier-eslint": "^15.0.1",
     "puppeteer": "^10.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -65,8 +66,8 @@
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
-    "typedoc": "^0.22.4",
-    "typescript": "^4.4.3",
+    "typedoc": "^0.23.20",
+    "typescript": "^4.8.4",
     "uuid": "^8.3.2"
   }
 }
