--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
       - name: 'Install and Build'
         run: |
           yarn
+          cd examples/create-react-app-typescript-example
+          yarn
+          cd -
           yarn types
           yarn lint
           yarn build
