--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dittolive/react-ditto",
-  "version": "0.11.0-alpha.0",
+  "version": "0.11.0",
   "description": "React wrappers for Ditto",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
