--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "type": "git",
     "url": "https://github.com/getditto/react-ditto.git"
   },
+  "dependencies": {
+    "lodash.isequal": "^4.5.0"
+  },
   "peerDependencies": {
     "@dittolive/ditto": "^4.0.0",
     "react": ">=16.0.0",
@@ -29,6 +32,7 @@
     "@testing-library/react": "^13.0.1",
     "@types/chai": "^4.2.21",
     "@types/lodash": "^4.14.172",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/mocha": "^10.0.0",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
