--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "prettier": "2.7.1",
     "prettier-eslint": "^15.0.1",
     "puppeteer": "^10.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-test-renderer": "^18.0.0",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.2",
