--- a/package.json
+++ b/package.json
@@ -73,5 +73,16 @@
     "typedoc": "^0.25.13",
     "typescript": "^4.8.4",
     "uuid": "^9.0.1"
-  }
+  },
+  "browserslist": [
+    "Chrome >= 84",
+    "Edge >= 84",
+    "Firefox >= 79",
+    "Safari >= 14.1",
+    "iOS >= 14.5",
+    "Android >= 84",
+    "ChromeAndroid >= 84",
+    "FirefoxAndroid >= 79"
+  ]
+  
 }
