--- a/examples/create-react-app-typescript-example/package.json
+++ b/examples/create-react-app-typescript-example/package.json
@@ -54,5 +54,8 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "prettier": "3.2.5",
     "prettier-eslint": "^16.3.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
