--- a/package.json
+++ b/package.json
@@ -29,49 +29,60 @@
   },
   "devDependencies": {
     "@dittolive/ditto": "^4.0.0",
-    "@testing-library/react": "^13.0.1",
+    "@testing-library/react": "^14.3.1",
     "@types/chai": "^4.2.21",
     "@types/lodash": "^4.14.172",
     "@types/lodash.isequal": "^4.5.6",
     "@types/mocha": "^10.0.0",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
-    "@types/sinon": "^10.0.11",
+    "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^3.2.8",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "chai": "^4.3.4",
     "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-deprecation": "^1.3.2",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "gh-pages": "^3.2.3",
-    "karma": "^6.3.4",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "gh-pages": "^6.1.1",
+    "karma": "^6.4.3",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^5.5.1",
-    "karma-typescript-es6-transform": "^5.5.1",
+    "karma-typescript": "^5.5.4",
+    "karma-typescript-es6-transform": "^5.5.4",
     "live-server": "^1.2.1",
     "lodash": "^4.17.21",
     "mocha": "^10.1.0",
-    "prettier": "2.7.1",
-    "prettier-eslint": "^15.0.1",
-    "puppeteer": "^10.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "prettier": "3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "puppeteer": "^22.6.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-test-renderer": "^18.0.0",
-    "rimraf": "^3.0.2",
-    "sinon": "^14.0.2",
+    "rimraf": "^5.0.5",
+    "sinon": "^17.0.1",
     "sinon-chai": "^3.7.0",
-    "typedoc": "^0.23.20",
+    "typedoc": "^0.25.13",
     "typescript": "^4.8.4",
-    "uuid": "^8.3.2"
-  }
+    "uuid": "^9.0.1"
+  },
+  "browserslist": [
+    "Chrome >= 84",
+    "Edge >= 84",
+    "Firefox >= 79",
+    "Safari >= 14.1",
+    "iOS >= 14.5",
+    "Android >= 84",
+    "ChromeAndroid >= 84",
+    "FirefoxAndroid >= 79"
+  ]
+  
 }
