Configure ESM target

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "@dittolive/react-ditto",
   "version": "0.11.1",
   "description": "React wrappers for Ditto",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.json",
     "test": "karma start",
     "types": "tsc -p tsconfig.json",
     "lint": "eslint . --ext .ts,.tsx",
