--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": ["ESNext", "dom"],
     "allowJs": true,
     "module": "commonjs",
     "noImplicitAny": true,
