--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
