Update required Ditto version

--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "lodash.isequal": "^4.5.0"
   },
   "peerDependencies": {
-    "@dittolive/ditto": "^4.0.0",
+    "@dittolive/ditto": "^4.8.1",
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
-    "@dittolive/ditto": "^4.0.0",
+    "@dittolive/ditto": "^4.8.1",
     "@testing-library/react": "^14.3.1",
     "@types/chai": "^4.2.21",
+    "@types/karma": "^6.3.8",
     "@types/lodash": "^4.14.172",
     "@types/lodash.isequal": "^4.5.6",
     "@types/mocha": "^10.0.0",
