replace create-react-app example with vite

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
       - name: 'Install and Build'
         run: |
           yarn
-          cd examples/create-react-app-typescript-example
+          cd examples/vite-typescript-example
           yarn
           cd -
-          yarn types
+          yarn type-check
           yarn lint
           yarn build
 
