--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "build:static-files": "cp package.json CHANGELOG.md README.md dist/",
     "test": "karma start",
     "types": "tsc -p tsconfig.esm.json",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
     "docs:generate": "rimraf documentation-website/* && typedoc",
     "docs:serve": "live-server ./documentation-website"
   },
@@ -53,15 +54,15 @@
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "chai": "^4.3.4",
-    "eslint": "^8.27.0",
+    "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "gh-pages": "^6.1.1",
+    "globals": "^15.12.0",
     "karma": "^6.4.3",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -84,6 +85,7 @@
     "sinon-chai": "^3.7.0",
     "typedoc": "^0.25.13",
     "typescript": "^4.8.4",
+    "typescript-eslint": "^8.15.0",
     "uuid": "^9.0.1"
   },
   "browserslist": [
