--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
     "docs:generate": "rimraf documentation-website/* && typedoc",
-    "docs:serve": "live-server ./documentation-website"
+    "docs:serve": "npx serve -s documentation-website -p 9999"
   },
   "author": "DittoLive Inc.",
   "license": "ISC",
@@ -71,7 +71,6 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-typescript": "^5.5.4",
     "karma-typescript-es6-transform": "^5.5.4",
-    "live-server": "^1.2.1",
     "lodash": "^4.17.21",
     "mocha": "^10.1.0",
     "prettier": "3.2.5",
@@ -80,7 +79,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-test-renderer": "^18.0.0",
-    "rimraf": "^5.0.5",
+    "rimraf": "^6.0.1",
     "sinon": "^17.0.1",
     "sinon-chai": "^3.7.0",
     "typedoc": "^0.25.13",
