--- a/package.json
+++ b/package.json
@@ -43,52 +43,52 @@
     "tar-fs": "3.0.8"
   },
   "devDependencies": {
-    "@dittolive/ditto": "^4.0.0",
-    "@testing-library/react": "^14.3.1",
-    "@types/chai": "^4.2.21",
-    "@types/lodash": "^4.14.172",
-    "@types/lodash.isequal": "^4.5.6",
-    "@types/mocha": "^10.0.0",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.0",
-    "@types/sinon": "^17.0.3",
-    "@types/sinon-chai": "^3.2.8",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "chai": "^4.3.4",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "gh-pages": "^6.1.1",
-    "globals": "^15.12.0",
-    "karma": "^6.4.3",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^5.5.4",
-    "karma-typescript-es6-transform": "^5.5.4",
-    "lodash": "^4.17.21",
-    "mocha": "^10.1.0",
+    "@dittolive/ditto": "4.0.0",
+    "@testing-library/react": "14.3.1",
+    "@types/chai": "4.2.21",
+    "@types/lodash": "4.14.172",
+    "@types/lodash.isequal": "4.5.6",
+    "@types/mocha": "10.0.0",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.0",
+    "@types/sinon": "17.0.3",
+    "@types/sinon-chai": "3.2.8",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "8.15.0",
+    "@typescript-eslint/parser": "8.15.0",
+    "chai": "4.3.4",
+    "eslint": "9.15.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "gh-pages": "6.1.1",
+    "globals": "15.12.0",
+    "karma": "6.4.3",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.3",
+    "karma-mocha": "2.0.1",
+    "karma-mocha-reporter": "2.2.5",
+    "karma-typescript": "5.5.4",
+    "karma-typescript-es6-transform": "5.5.4",
+    "lodash": "4.17.21",
+    "mocha": "10.1.0",
     "prettier": "3.2.5",
-    "prettier-eslint": "^16.3.0",
-    "puppeteer": "^23.9.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-test-renderer": "^18.0.0",
-    "rimraf": "^6.0.1",
-    "sinon": "^17.0.1",
-    "sinon-chai": "^3.7.0",
-    "typedoc": "^0.25.13",
-    "typescript": "^4.8.4",
-    "typescript-eslint": "^8.15.0",
-    "uuid": "^9.0.1"
+    "prettier-eslint": "16.3.0",
+    "puppeteer": "23.9.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-test-renderer": "18.0.0",
+    "rimraf": "6.0.1",
+    "sinon": "17.0.1",
+    "sinon-chai": "3.7.0",
+    "typedoc": "0.25.13",
+    "typescript": "4.8.4",
+    "typescript-eslint": "8.15.0",
+    "uuid": "9.0.1"
   },
   "browserslist": [
     "Chrome >= 84",
