Add DQL support with useQuery and useExecuteQuery hooks
- Add useQuery hook for reactive queries with sync subscriptions
- Add useExecuteQuery hook for one-time query execution
- Update example app to use DQL instead of collection-based API
- Rename old example to vite-typescript-example-legacy
- Update CI to test both DQL and legacy examples

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,11 @@ jobs:
           yarn
           cd examples/vite-typescript-example
           yarn
-          cd -
+          yarn build
+          cd ../vite-typescript-example-legacy
+          yarn
+          yarn build
+          cd ../..
           yarn types
           yarn lint
           yarn build
